samples/_failures_safe/1761349426_e418ba_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4ee9f42f.c: In function ‘main’:
./samples/SAFE/__tmp_4ee9f42f.c:169:17: error: expected ‘;’ at end of input
  169 |         return 1
      |                 ^
      |                 ;
./samples/SAFE/__tmp_4ee9f42f.c:169:9: error: expected declaration or statement at end of input
  169 |         return 1
      |         ^~~~~~
./samples/SAFE/__tmp_4ee9f42f.c:169:9: error: expected declaration or statement at end of input
